fix(RaceList): fix round spacing

--- a/src/components/driver/DriverStandings/DriverStandings.css
+++ b/src/components/driver/DriverStandings/DriverStandings.css
@@ -1,4 +1,5 @@
-.standings-position {
+.standings-position,
+.round-position {
   min-width: 1.5rem;
 }
 
